# zero2prod

./: .dockerignore  .env  Cargo.toml  Dockerfile  configuration.yaml  fly.toml
.github/workflows/: general.yml
.sqlx/: query-96b9629d156e389af427a236f488b51907f1acfc36c60006b18cb0f109856747.json
configuration/: base.yaml  production.yaml
migrations/: 20240805205808_create_subscriptions_table.sql  20240819182909_make_statis_not_null_in_subscriptions.sql  20240819183214_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  main.rs  startup.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
