[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.8.0"
chrono = "0.4.38"
config = "0.14.0"
rand = "0.8.5"
reqwest = "0.12.5"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
tokio-macros = "2.2.0"
uuid = { version = "1.10.0", features = ["v4"] }
yaml-rust2 = "0.8.1"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]
