[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.8.0"
chrono = "0.4.38"
config = "0.14.0"
once_cell = "1.19.0"
rand = "0.8.5"
reqwest = "0.12.5"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4.5.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
tokio-macros = "2.2.0"
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.11"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
unicode-segmentation = "1.11.0"
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
claims = "0.7.1"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]
